--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+###> phpstorm ###
+.idea
+###< phpstorm ###
 
 ###> symfony/framework-bundle ###
+/.env
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -8,3 +12,8 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
