--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^2.0",
+        "doctrine/orm": "^2.7",
+        "symfony/annotations-pack": "^1.0",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
@@ -12,6 +15,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^8.5"
     },
     "config": {
         "preferred-install": {
@@ -21,12 +25,12 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "Marcak\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "Marcak\\Strix\\Tests\\": "tests/"
         }
     },
     "replace": {
